k8s/manifest/istio/open-match/frontend/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: open-match-frontend
  namespace: open-match
spec:
  host: open-match-frontend.open-match.svc.cluster.local
  subsets:
  - name: default
    labels:
      app: open-match
      component: frontend
      release: open-match
    trafficPolicy:
      connectionPool:
        tcp:
          connectTimeout: 600s
        http:
          http2MaxRequests: 4000
          idleTimeout: 600s
